# openai-batch-wrapper

./: .gitignore  Makefile  README.md  pyproject.toml
doc/: structure.md
sandbox/: peak_data.py  run_batch.py  run_batch_manager.py  run_batch_of_batch.py  run_preprocess.py
scripts/: analyze.py  main.tex  table.tex  table_by_year.tex
src/openai_batch_wrapper/: batch.py  batch_manager.py  cli.py  logger.py  preprocess.py  track_retrieve_batch_progress.py
tests/: test_batch.py
