[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-batch-wrapper"
version = "0.1.0"
description = "A simple OpenAI batch wrapper using UV package manager"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "openai",
    "pandas==2.3.0",
    "fastparquet",
    "tiktoken"
    ]

[project.scripts]
openai-batch = "openai_batch_wrapper.cli:main" 